add classpath reading support